Fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,10 +32,13 @@ a {
   --header-height: 64vh;
   --font-size-hero: 72px;
   --font-size-hero2: 48px;
+  --font-size-headline: 32px;
   --font-size-body: 24px;
   --font-size-button: 24px;
 
   --content-padding: 0em;
+
+  --modal-header-height: 80px;
 
   --grid-template-hero: repeat(5, minmax(20vw, 1fr));
 
@@ -60,10 +63,13 @@ a {
 
     --font-size-hero: 32px;
     --font-size-hero2: 20px;
+    --font-size-headline: 24px;
     --font-size-body: 16px;
     --font-size-button: 16px;
 
     --content-padding: 1em;
+
+    --modal-header-height: 60px;
 
     /*
     --grid-template-hero: repeat(2, minmax(20vw, 1fr));
